# slack-fuse

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  slack-fuse.service
.github/workflows/: docker.yml
docs/: probe-detection-queries.md
docs/plans/: 2026-06-08-server-split-orchestration.md  sprint-status.md
docs/rfcs/: 2026-05-server-split.md
scripts/: compare-mounts.py
scripts/break-test/: break_test.py
scripts/k8s/: README.md  backfill-job.sh  bulk-backfill.sh  channel-volume.sh  message-history.sh
scripts/watchdog/: README.md  slack-fuse-watchdog.service  slack-fuse-watchdog.sh  slack-fuse-watchdog.timer
slack_fuse/: __main__.py  _slug_helpers.py  api.py  archive.py  auth.py  backfill.py  canvas.py  config.py  control.py  disk_cache.py  events.py  fuse_ops.py  fuse_ops_v2.py  fuse_v2_helpers.py  inode_map.py  invalidation.py  logctx.py  models.py  mrkdwn.py  permalink.py  pg_health.py  renderer.py  resolve.py  schema.sql  slug.py  socket_mode.py  store.py  transcript.py  user_cache.py
slack_fuse/cli/: __init__.py  rerender.py  tier.py
slack_fuse/migrations/: 0001_init.sql  0002_block_sync.sql  0003_server_block_sync_prior_tier.sql  __init__.py  runner.py
slack_fuse/projector/: __init__.py  __main__.py  _control_cache.py  apply.py  block_fetch.py  block_sync.py  cursor.py  gaps_fetch.py  gaps_warmer.py  health_subscriber.py  originals_fetch.py  per_stream.py  pool.py  probe_fetch.py  probes_fetch.py  refill_fetch.py  refresh_fetch.py  rerender.py  snapshot_fetch.py  trailer.py  trailer_log.py  ws_client.py
slack_fuse_poc_b/: __init__.py  mrkdwn_split.py
slack_fuse_render/: __init__.py  mrkdwn.py  render.py  resolvers.py  types.py
slack_fuse_server/: __init__.py  _json.py  blocked_channels.py  config.py  dispatch.py  gap_detection.py  gaps.py  originals.py  schema.sql
slack_fuse_server/backfill/: __init__.py  api.py  legacy.py  resume.py  run_events.py  types.py
slack_fuse_server/http/: __init__.py  dto.py  handlers.py  metrics.py  permalink.py  resolve.py  server.py  slack_webhook.py  snapshot.py
slack_fuse_server/migrations/: 0001_init.sql  0002_users_dedup.sql  0003_channels_dedup.sql  0004_channels_view.sql  0005_health_log_view.sql  0006_blocked_channels.sql  0007_socket_event_dedup.sql  0008_active_messages_view.sql  0009_events_source_column.sql  0010_thread_parent_hint_idx.sql  0011_backfill_run_stream.sql  0012_slack_event_inbox.sql  0013_channels_view_fold_drift.sql  __init__.py
slack_fuse_server/queries/: __init__.py  gap_detection.sql
slack_fuse_server/slack_events/: __init__.py  dispatcher.py  inbox.py  types.py
slack_fuse_server/slurper/: __init__.py  __main__.py  (+14 more)
tests/: README.md  conftest.py  stubs.py  test_auth.py  test_backfill.py  test_disk_cache.py  test_equivalence.py  test_events.py  test_fuse_ops_paths.py  test_infra_smoke.py  test_invalidation.py  test_models.py  test_permalink.py  test_pure_utils.py  test_resolve.py  test_socket_events.py  test_store_api_call.py  test_store_channel_filter.py
tools/: debug_subscribe.py
(+123 files in other folders)
