[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack-fuse"
version = "0.1.0"
description = "Read-only FUSE filesystem exposing Slack channels, DMs, threads, and huddle notes as markdown"
requires-python = ">=3.12"
dependencies = [
    "pyfuse3>=3.4.0",
    "httpx>=0.27.0",
    "trio>=0.27.0",
    "trio-websocket>=0.11.0",
    "pydantic>=2.0",
]

[project.scripts]
slack-fuse = "slack_fuse.__main__:main"

[dependency-groups]
dev = [
    "basedpyright",
    "ruff",
    "pytest",
    "pytest-trio",
]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.ruff]
preview = true
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
